# typhoon-assignment

./: .env.sample  .gitignore  README.md  pyproject.toml
src/typhoon_assignment/: __init__.py  grade.py  main.py  mcq.py  scrape.py  setting.py
src/typhoon_assignment/data/: mcq.jsonl  mcq1.jsonl  mcq1_no_ans.jsonl  mcq2.jsonl  mcq2_no_ans.jsonl  recipe.json  recipe_scrape.json  thai_test_example.jsonl
src/typhoon_assignment/llm/: __init__.py  llm.py  prompt.py
src/typhoon_assignment/scrape/: __init__.py
