[project]
name = "typhoon-assignment"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langchain-openai>=0.1.23",
    "langchain-core>=0.2.38",
    "python-dotenv>=1.0.1",
    "bs4>=0.0.2",
    "selenium>=4.24.0",
    "pathlib>=1.0.1",
    "jsonlines>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/typhoon_assignment"]
